# dontrack

./: .gitignore  .pylintrc  mypy.ini  pyproject.toml  renovate.json
src/: manage.py
src/bootstrap/: settings.py
src/bootstrap/static/css/: _variables.scss
src/dontrack/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
src/dontrack/accounts/: tests.py
src/dontrack/accounts/migrations/: 0001_initial.py
src/dontrack/accounts/models/: __init__.py  user.py
src/dontrack/accounts/templates/: landing_page.html
src/dontrack/accounts/urls/: __init__.py
src/dontrack/accounts/views/: auth.py  landing_page.py  profile.py
src/dontrack/donations/migrations/: 0001_initial.py  0002_alter_donation_amount_alter_donation_donor.py
src/dontrack/donations/models/: __init__.py  donation.py
src/dontrack/donations/templates/donations/: donation_create.html  donation_list.html
src/dontrack/donations/urls/: __init__.py
src/dontrack/donations/views/: donations.py
src/dontrack/donors/forms/: donors.py
src/dontrack/donors/migrations/: 0001_initial.py
src/dontrack/donors/models/: __init__.py  donor.py
src/dontrack/donors/templates/donors/: donor_create.html  donor_registration_succes.html  qr_view.html
src/dontrack/donors/urls/: __init__.py
src/dontrack/donors/views/: donors.py
src/dontrack/log/templates/log/: log_list.html
src/dontrack/log/urls/: __init__.py
src/dontrack/log/views/: log.py
src/dontrack/templates/: base.html  top_nav.html
src/dontrack/utils/context_processors/: __init__.py
src/dontrack/utils/templatetags/: changelog.py  fa_checkbox.py
src/dontrack_pretix/: settings.py  urls.py
src/dontrack_pretix/migrations/: 0001_initial.py  0002_alter_order_options_alter_order_order_id_and_more.py
src/dontrack_pretix/models/: __init__.py  order.py
src/dontrack_pretix/templates/pretix/: order_list.html
src/dontrack_pretix/utils/: pretix_api.py
src/dontrack_pretix/views/: pretix.py
src/locale/de/LC_MESSAGES/: django.po
src/locale/en/LC_MESSAGES/: django.po
