[project]
name = 'dontrack'
version = '0.0.1'
description = 'Online donor and donation tracking'
readme = 'README.md'
requires-python = '>=3.9'
authors = [
    { name = 'promasu' },
]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]

dependencies = [
    'Django==6.0.1',
    'django-auditlog==3.4.1',
    'django-bootstrap5==26.1',
    'django-qr-code==4.2.0',
    'django-localflavor==5.0',
    'gunicorn==25.0.0',
    'psycopg2-binary==2.9.11',
    'Authlib==1.6.6',
    'requests==2.32.5',
    'python-dateutil==2.9.0.post0',
]

[project.optional-dependencies]
tests = [
    'coverage==7.13.2',
    'django-stubs==5.2.9',
    'mypy==1.19.1',
    'pylint==4.0.4',
    'pylint-django==2.7.0',
    'types-requests~=2.32.0',
]
docs = [
    'mkdocs==1.6.1',
    'mkdocs-material==9.7.2'
]

[project.urls]
repository = 'https://github.com/entropia/dontrack'

[tool.setuptools.packages.find]
where=['src']

[tool.setuptools.package-data]
shiftings = ['py.typed']
